project/GCP YAML/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-starbucks-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-starbucks-api
  replicas: 2 # tells deployment to run 2 pods matching the template, but this project the kong API gateway didn't access the session affinity for stateless.
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-starbucks-api
    spec:
      containers:
        - name: spring-starbucks-api
          image: mujunyu520/spring-starbucks-api:v3.1
          ports:
            - containerPort: 8080
